--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -350,15 +350,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>series used (X)</th>\n",
+       "      <th>model</th>\n",
+       "      <th>AUC Score</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall (sensitivity)</th>\n",
+       "      <th>confusion matrix</th>\n",
+       "      <th>train accuracy</th>\n",
+       "      <th>test accuracy</th>\n",
+       "      <th>baseline accuracy</th>\n",
+       "      <th>specificity</th>\n",
+       "      <th>f1-score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>selftext</td>\n",
+       "      <td>CountVec + MultinomialNB</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>{'TP': 161, 'FP': 78, 'TN': 152, 'FN': 84}</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>author</td>\n",
+       "      <td>CountVec + MultinomialNB</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>{'TP': 235, 'FP': 204, 'TN': 26, 'FN': 10}</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>title</td>\n",
+       "      <td>CountVec + MultinomialNB</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>{'TP': 167, 'FP': 104, 'TN': 126, 'FN': 78}</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>selftext_clean</td>\n",
+       "      <td>CountVec + MultinomialNB</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>{'TP': 165, 'FP': 78, 'TN': 152, 'FN': 80}</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>author_clean</td>\n",
+       "      <td>CountVec + MultinomialNB</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>{'TP': 169, 'FP': 155, 'TN': 75, 'FN': 76}</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>title_clean</td>\n",
+       "      <td>CountVec + MultinomialNB</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>{'TP': 178, 'FP': 112, 'TN': 118, 'FN': 67}</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>megatext_clean</td>\n",
+       "      <td>CountVec + MultinomialNB</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>{'TP': 160, 'FP': 71, 'TN': 159, 'FN': 85}</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  series used (X)                     model  AUC Score  precision  \\\n",
+       "0        selftext  CountVec + MultinomialNB       0.69       0.66   \n",
+       "1          author  CountVec + MultinomialNB       0.57       0.63   \n",
+       "2           title  CountVec + MultinomialNB       0.67       0.62   \n",
+       "3  selftext_clean  CountVec + MultinomialNB       0.69       0.67   \n",
+       "4    author_clean  CountVec + MultinomialNB       0.54       0.51   \n",
+       "5     title_clean  CountVec + MultinomialNB       0.67       0.63   \n",
+       "6  megatext_clean  CountVec + MultinomialNB       0.71       0.67   \n",
+       "\n",
+       "   recall (sensitivity)                             confusion matrix  \\\n",
+       "0                  0.66   {'TP': 161, 'FP': 78, 'TN': 152, 'FN': 84}   \n",
+       "1                  0.55   {'TP': 235, 'FP': 204, 'TN': 26, 'FN': 10}   \n",
+       "2                  0.62  {'TP': 167, 'FP': 104, 'TN': 126, 'FN': 78}   \n",
+       "3                  0.67   {'TP': 165, 'FP': 78, 'TN': 152, 'FN': 80}   \n",
+       "4                  0.51   {'TP': 169, 'FP': 155, 'TN': 75, 'FN': 76}   \n",
+       "5                  0.62  {'TP': 178, 'FP': 112, 'TN': 118, 'FN': 67}   \n",
+       "6                  0.67   {'TP': 160, 'FP': 71, 'TN': 159, 'FN': 85}   \n",
+       "\n",
+       "   train accuracy  test accuracy  baseline accuracy  specificity  f1-score  \n",
+       "0            0.92           0.66               0.52         0.66      0.66  \n",
+       "1            0.99           0.55               0.52         0.11      0.45  \n",
+       "2            0.85           0.62               0.52         0.55      0.62  \n",
+       "3            0.91           0.67               0.52         0.66      0.67  \n",
+       "4            0.95           0.51               0.52         0.33      0.50  \n",
+       "5            0.84           0.62               0.52         0.51      0.62  \n",
+       "6            0.95           0.67               0.52         0.69      0.67  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# using the function\n",
     "columns_list = ['selftext', \"author\", \"title\",'selftext_clean', \"author_clean\", \"title_clean\", \"megatext_clean\"]\n",
     "model = \"CountVec + MultinomialNB\"\n",
     "df_list=[]\n",
     "multi_modelling(columns_list, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on our results, using the megatext_clean column will be the best option for our model due its good metrics, such as its AUC value. The false negatives are the highest in our confusion matrix, meaning it is good for the model to learn from. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Production Model\n",
+    "We will test a few different models by running some perumatations and recording the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a function that test different models and record parameters\n",
+    "\n",
+    "def gridsearch_multi(steps_titles, steps_list, pipe_params):\n",
+    "    \n",
+    "    X = model_data[\"megatext_clean\"]\n",
+    "    y = model_data['is_suicide']\n",
+    "    \n",
+    "    # train/test split\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)\n",
+    "    # build dataframe\n",
+    "    gs_results = pd.DataFrame(columns=['model','AUC Score', 'precision', 'recall (sensitivity)', \n",
+    "                                       'best_params', 'best score', 'confusion matrix', \n",
+    "                                       'train_accuracy','test_accuracy','baseline_accuracy',\n",
+    "                                       'specificity', 'f1-score'])\n",
+    "\n",
+    "    for i in range(len(steps_list)):\n",
+    "        # define pipeline\n",
+    "        pipe = Pipeline(steps=steps_list[i])\n",
+    "\n",
+    "        gs = GridSearchCV(pipe, pipe_params[i], cv=3) \n",
+    "        gs.fit(X_train, y_train)\n",
+    "        \n",
+    "        # getting predictions from model\n",
+    "        pred = gs.predict(X_test)\n",
+    "        \n",
+    "        # confusion matrix\n",
+    "        tn, fp, fn, tp = confusion_matrix(y_test, gs.predict(X_test)).ravel() \n",
+    "        \n",
+    "        classi_dict = (classification_report(y_test,pred, output_dict=True))\n",
+    "        \n",
+    "        # calculating AUC\n",
+    "        gs.predict_proba(X_test)\n",
+    "        pred_proba = [i[1] for i in gs.predict_proba(X_test)] \n",
+    "        auc = roc_auc_score(y_test, pred_proba)\n",
+    "        \n",
+    "        # create dataframe columns\n",
+    "        model_results = {}\n",
+    "        model_results['model'] = steps_titles[i]\n",
+    "        model_results['AUC Score'] = auc\n",
+    "        model_results['precision']= classi_dict['weighted avg']['precision']\n",
+    "        model_results['recall (sensitivity)']= classi_dict['weighted avg']['recall']\n",
+    "        model_results['best params'] = gs.best_params_\n",
+    "        model_results['best score'] = gs.best_score_\n",
+    "        model_results['confusion matrix']={\"TP\": tp,\"FP\":fp, \"TN\": tn, \"FN\": fn}\n",
+    "        model_results['train accuracy'] = gs.score(X_train, y_train)\n",
+    "        model_results['test accuracy'] = gs.score(X_test, y_test)\n",
+    "        model_results['baseline accuracy'] = 0.5166\n",
+    "        \n",
+    "        model_results['specificity']= tn/(tn+fp)  \n",
+    "        model_results['f1-score']= classi_dict['weighted avg']['f1-score']\n",
+    "\n",
+    "\n",
+    "        # add data\n",
+    "        df_list.append(model_results) \n",
+    "        pd.set_option(\"display.max_colwidth\", 200)\n",
+    "    return (pd.DataFrame(df_list)).round(2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing function with count vectorizor\n",
+    "\n",
+    "df_list=[]\n",
+    "\n",
+    "# models\n",
+    "steps_titles = ['cvec+ multi_nb','cvec + ss + knn','cvec + ss + logreg']\n",
+    "\n",
+    "# pipelines\n",
+    "steps_list = [ \n",
+    "    [('cv', CountVectorizer()),('multi_nb', MultinomialNB())],\n",
+    "    [('cv', CountVectorizer()),('scaler', StandardScaler(with_mean=False)),('knn', KNeighborsClassifier())], \n",
+    "    [('cv', CountVectorizer()),('scaler', StandardScaler(with_mean=False)),('logreg', LogisticRegression())]\n",
+    "]\n",
+    "\n",
+    "# parameters\n",
+    "pipe_params = [\n",
+    "    {'cv__stop_words':['english'], 'cv__ngram_range':[(1,1),(1,2)],'cv__max_features': [20, 30, 50],'cv__min_df': [2, 3],'cv__max_df': [.2, .25, .3]},\n",
+    "    {'cv__stop_words':['english'], 'cv__ngram_range':[(1,1),(1,2)],'cv__max_features': [20, 30, 50],'cv__min_df': [2, 3],'cv__max_df': [.2, .25, .3]},\n",
+    "    {'cv__stop_words':['english'], 'cv__ngram_range':[(1,1),(1,2)],'cv__max_features': [20, 30, 50],'cv__min_df': [2, 3],'cv__max_df': [.2, .25, .3]}\n",
+    "]   \n",
+    "\n",
+    "gridsearch_multi(steps_titles, steps_list, pipe_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing function with TFD Vectorizor\n",
+    "\n",
+    "# models\n",
+    "steps_titles = ['tvec + multi_nb','tvec + ss + knn','tvec + ss + logreg']\n",
+    "\n",
+    "# pipelines\n",
+    "steps_list = [ \n",
+    "    [('tv', TfidfVectorizer()),('multi_nb', MultinomialNB())],\n",
+    "    [('tv', TfidfVectorizer()),('scaler', StandardScaler(with_mean=False)),('knn', KNeighborsClassifier())], \n",
+    "    [('tv', TfidfVectorizer()),('scaler', StandardScaler(with_mean=False)),('logreg', LogisticRegression())]\n",
+    "]\n",
+    "\n",
+    "# parameters\n",
+    "pipe_params = [\n",
+    "    {'tv__stop_words':['english'], 'tv__ngram_range':[(1,1),(1,2)],'tv__max_features': [20, 30, 50],'tv__min_df': [2, 3],'tv__max_df': [.2, .25, .3]},\n",
+    "    {'tv__stop_words':['english'], 'tv__ngram_range':[(1,1),(1,2)],'tv__max_features': [20, 30, 50],'tv__min_df': [2, 3],'tv__max_df': [.2, .25, .3]},\n",
+    "    {'tv__stop_words':['english'], 'tv__ngram_range':[(1,1),(1,2)],'tv__max_features': [20, 30, 50],'tv__min_df': [2, 3],'tv__max_df': [.2, .25, .3]}\n",
+    "]   \n",
+    "\n",
+    "gridsearch_multi(steps_titles, steps_list, pipe_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing function with Hashing Vectorizor\n",
+    "\n",
+    "# models\n",
+    "steps_titles = ['hvec + multi_nb','hvec + ss + knn','hvec + ss + logreg']\n",
+    "\n",
+    "# pipelines\n",
+    "steps_list = [ \n",
+    "    [('hv', HashingVectorizer(alternate_sign=False)),('multi_nb', MultinomialNB())],\n",
+    "    [('hv', HashingVectorizer(alternate_sign=False)),('scaler', StandardScaler(with_mean=False)),('knn', KNeighborsClassifier())], \n",
+    "    [('hv', HashingVectorizer(alternate_sign=False)),('scaler', StandardScaler(with_mean=False)),('logreg', LogisticRegression())]\n",
+    "]\n",
+    "\n",
+    "# parameters\n",
+    "pipe_params = [\n",
+    "    {'hv__stop_words':['english'], 'hv__ngram_range':[(1,1),(1,2)]},\n",
+    "    {'hv__stop_words':['english'], 'hv__ngram_range':[(1,1),(1,2)]},\n",
+    "    {'hv__stop_words':['english'], 'hv__ngram_range':[(1,1),(1,2)]}\n",
+    "]   \n",
+    "\n",
+    "gridsearch_multi(steps_titles, steps_list, pipe_params)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After reviewing all the performances, two models stand out. The Hashing Vectorizor and Multinomial Naive Bayes model had much better metrics, along with the TFID Vectorizor and Multinomial Naive Bayes Model. They both have good AUC values and high generalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuning Hyperparameters"
    ]
   },
   {
