--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -1531,6 +1531,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running our Optimized Model\n",
+    "This model is a combination of TF-IDF(\"Term Frequency - Inverse Document\" Frequency) Vectorizer and the Multinomial Naive Bayes. It assigns scores for the top 70 words in our selected feature. TF-IDF will penalize common words, helping the model find specific key words. The model makes a prediction based on a matrix of word scores and gives a probability of falling into a certain classification. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.34329862 0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.19154645]\n",
+      " ...\n",
+      " [0.         0.         0.         ... 0.         0.         0.04899098]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]]\n",
+      "Accuracy: 0.6989473684210527\n",
+      "AUC Score: 0.7548003549245785\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking scores of optimized model using test data\n",
+    "\n",
+    "X = model_data[\"megatext_clean\"]\n",
+    "y = model_data['is_suicide']\n",
+    "# train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)\n",
+    "\n",
+    "tvec_optimised = TfidfVectorizer(max_df= 0.5, max_features=70, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
+    "X_train_tvec = tvec_optimised.fit_transform(X_train).todense()\n",
+    "X_test_tvec = tvec_optimised.transform(X_test).todense()\n",
+    "\n",
+    "print(X_train_tvec)\n",
+    "\n",
+    "# getting accuracies of the model\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(X_train_tvec, y_train)\n",
+    "accuracy = nb.score(X_test_tvec, y_test)\n",
+    "\n",
+    "# calculating AUC\n",
+    "\n",
+    "pred_proba = [i[1] for i in nb.predict_proba(X_test_tvec)] \n",
+    "auc = roc_auc_score(y_test, pred_proba)\n",
+    "\n",
+    "# save model\n",
+    "pickle.dump(nb, open(\"model.h5\", 'wb'))\n",
+    "\n",
+    "print(\"Accuracy: {}\\nAUC Score: {}\".format(accuracy, auc) )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
