--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "2  new killer 69 feeling really depressed lonely ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "0.5166051660516605"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "6            0.95           0.67               0.52         0.69      0.67  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "2           0.69               0.52         0.67      0.69  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "5           0.67               0.52         0.69      0.67  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
        "8           0.62               0.52         0.61      0.62  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
        "10           0.69               0.52         0.67      0.69  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,20 +1547,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.34329862 0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.19154645]\n",
-      " ...\n",
-      " [0.         0.         0.         ... 0.         0.         0.04899098]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]]\n",
+      "0       sql witch understand people reply immediately op invitation talk privately mean help type response usually lead either disappointment disaster usually work quite differently say pm anytime casual ...\n",
+      "1       c irc welcome r depression check post place take moment share going accomplishment want talk standalone post sub violate role model rule welcome tough time prefer make post place share try best ke...\n",
+      "2       new killer 69 feeling really depressed lonely lately job full time late night janitor courthouse 10 mile away hometown working ha pretty easy wound feeling super lonely lot considering really get ...\n",
+      "3       jazz le crab literally broke cry asked go home another nurse wa watching wa cry saying wanted keep longer kept saying wanted go home said wa wasting time making watch asked cry leaving never anyth...\n",
+      "4                                                     depressed kid 786 kind soul want give depressed person karma edit thanks everyone especially sub hope overcome depression day take easy everyone cake day\n",
+      "                                                                                                         ...                                                                                                   \n",
+      "1892    big pete 543 hard get bed every morning right want die damn hard alive world want keep going want keep fighting wish would end could peace ever asked life wa love ever wanted wa love world took re...\n",
+      "1893    eli sbt low iq twice tested time got iq around 84 85 somehow entirely awful school wa able b student without much studying actually started studying started get grade 90 even 100 even though skimm...\n",
+      "1894                                                                                                                                                                 gay h ovum feel useless im useless useless\n",
+      "1895    ev e wish wa way could non existence regret entire life know take last breath matter hand regret life stopping know would probably kill dad want daughter feel like would better without would want ...\n",
+      "1896                                                                     pon k ichi want die think want feel pain want feel something death way get sorry posting much today anyways im torn rn dont know right\n",
+      "Name: megatext_clean, Length: 1897, dtype: object\n",
       "Accuracy: 0.6989473684210527\n",
       "AUC Score: 0.7548003549245785\n"
      ]
@@ -1570,15 +1575,16 @@
     "# Checking scores of optimized model using test data\n",
     "\n",
     "X = model_data[\"megatext_clean\"]\n",
+    "print(X)\n",
     "y = model_data['is_suicide']\n",
     "# train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)\n",
     "\n",
-    "tvec_optimised = TfidfVectorizer(max_df= 0.5, max_features=70, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
+    "tvec_optimised = TfidfVectorizer( max_features=70, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
     "X_train_tvec = tvec_optimised.fit_transform(X_train).todense()\n",
     "X_test_tvec = tvec_optimised.transform(X_test).todense()\n",
     "\n",
-    "print(X_train_tvec)\n",
+    "# print(X_train_tvec)\n",
     "\n",
     "# getting accuracies of the model\n",
     "nb = MultinomialNB()\n",
@@ -1607,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1840,7 @@
        "[72 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
