parsed predictions working

--- a/notebooks/predictions.ipynb
+++ b/notebooks/predictions.ipynb
@@ -121,25 +121,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
     }
    ],
    "source": [
     "model = joblib.load(\"model2.h5\")\n",
     "\n",
     "tvec_optimised = TfidfVectorizer(max_features=70, ngram_range=(1, 3),stop_words = 'english')\n",
-    "processed_text_tvec = tvec_optimised.fit_transform(text_array).todense()\n",
+    "processed_text_tvec = tvec_optimised.fit_transform(processed_array).todense()\n",
     "\n",
     "# vectorizer.fit(processed_text)\n",
     "\n",
@@ -147,7 +144,8 @@
     "# vector = vectorizer.transform([processed_text[0]]).toarrary()\n",
     "\n",
     "\n",
-    "model.predict(processed_text_tvec)"
+    "prediction = model.predict(processed_text_tvec)\n",
+    "print(prediction[0])"
    ]
   },
   {
