--- a/notebooks/progression_model.ipynb
+++ b/notebooks/progression_model.ipynb
@@ -1007,6 +1007,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These are the 6 stages and the frequency specifically in Victoria's Diary. She made the most diary posts during Stage 5 and 6, right before she took her life."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
