removed extra files

--- a/notebooks/predictions.ipynb
+++ b/notebooks/predictions.ipynb
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is our prediction model. We first convert the inputted text into an array. This array is then tokenized and lemmatized for our model. Finally, the concated text is converted into a vector and "
+    "This is our prediction model. We first convert the inputted text into an array. This array is then tokenized and lemmatized for our model. Finally, the concated text is converted into a vector and inputted into our preloaded model and received a prediction."
    ]
   }
  ],
