--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -1598,7 +1598,7 @@
     "\n",
     "# save model\n",
     "# pickle.dump(nb, open(\"model.h5\", 'wb'))\n",
-    "joblib.dump(nb, \"model3.h5\")\n",
+    "joblib.dump(nb, \"finalModel.h5\")\n",
     "\n",
     "print(\"Accuracy: {}\\nAUC Score: {}\".format(accuracy, auc) )"
    ]
