progression model dumped

--- a/notebooks/progression_model.ipynb
+++ b/notebooks/progression_model.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,9 @@
     "from nltk.tokenize import RegexpTokenizer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.corpus import stopwords\n",
-    "import re"
+    "import re\n",
+    "\n",
+    "import joblib"
    ]
   },
   {
@@ -926,6 +928,8 @@
     "\n",
     "# getting predictions\n",
     "predictions = nb.predict(X_test_tvec)\n",
+    "\n",
+    "\n",
     "\n",
     "# adding predictions to dataframe\n",
     "vics_diary[\"predicted_suicide\"] = pd.DataFrame(predictions)\n",
