--- a/notebooks/unsupervised_text_clustering.ipynb
+++ b/notebooks/unsupervised_text_clustering.ipynb
@@ -63,7 +63,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Kmeans:\n",
+    "    \"\"\" K Means Clustering\n",
+    "    \n",
+    "    Parameters\n",
+    "    -----------\n",
+    "        k: int , number of clusters\n",
+    "        \n",
+    "        seed: int, will be randomly set if None\n",
+    "        \n",
+    "        max_iter: int, number of iterations to run algorithm, default: 200\n",
+    "        \n",
+    "    Attributes\n",
+    "    -----------\n",
+    "       centroids: array, k, number_features\n",
+    "       \n",
+    "       cluster_labels: label for each data point\n",
+    "       \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, k, seed = None, max_iter = 200):\n",
+    "        self.k = k\n",
+    "        self.seed = seed\n",
+    "        if self.seed is not None:\n",
+    "            np.random.seed(self.seed)\n",
+    "        self.max_iter = max_iter\n",
+    "        \n",
+    "            \n",
+    "    \n",
+    "    def initialise_centroids(self, data):\n",
+    "        \"\"\"Randomly Initialise Centroids\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        data: array or matrix, number_rows, number_features\n",
+    "        \n",
+    "        Returns\n",
+    "        --------\n",
+    "        centroids: array of k centroids chosen as random data points \n",
+    "        \"\"\"\n",
+    "        \n",
+    "        initial_centroids = np.random.permutation(data.shape[0])[:self.k]\n",
+    "        self.centroids = data[initial_centroids]\n",
+    "\n",
+    "        return self.centroids\n",
+    "    \n",
+    "    \n",
+    "    def assign_clusters(self, data):\n",
+    "        \"\"\"Compute distance of data from clusters and assign data point\n",
+    "           to closest cluster.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        data: array or matrix, number_rows, number_features\n",
+    "        \n",
+    "        Returns\n",
+    "        --------\n",
+    "        cluster_labels: index which minmises the distance of data to each\n",
+    "        cluster\n",
+    "            \n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if data.ndim == 1:\n",
+    "            data = data.reshape(-1, 1)\n",
+    "        \n",
+    "        dist_to_centroid =  pairwise_distances(data, self.centroids, metric = 'euclidean')\n",
+    "        self.cluster_labels = np.argmin(dist_to_centroid, axis = 1)\n",
+    "        \n",
+    "        return  self.cluster_labels\n",
+    "    \n",
+    "    \n",
+    "    def update_centroids(self, data):\n",
+    "        \"\"\"Computes average of all data points in cluster and\n",
+    "           assigns new centroids as average of data points\n",
+    "        \n",
+    "        Parameters\n",
+    "        -----------\n",
+    "        data: array or matrix, number_rows, number_features\n",
+    "        \n",
+    "        Returns\n",
+    "        -----------\n",
+    "        centroids: array, k, number_features\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        self.centroids = np.array([data[self.cluster_labels == i].mean(axis = 0) for i in range(self.k)])\n",
+    "        \n",
+    "        return self.centroids\n",
+    "    \n",
+    "    \n",
+    "    def convergence_calculation(self):\n",
+    "        \"\"\"\n",
+    "        Calculates \n",
+    "        \n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "    \n",
+    "    def predict(self, data):\n",
+    "        \"\"\"Predict which cluster data point belongs to\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        data: array or matrix, number_rows, number_features\n",
+    "        \n",
+    "        Returns\n",
+    "        --------\n",
+    "        cluster_labels: index which minmises the distance of data to each\n",
+    "        cluster\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        return self.assign_clusters(data)\n",
+    "    \n",
+    "    def fit_kmeans(self, data):\n",
+    "        \"\"\"\n",
+    "        This function contains the main loop to fit the algorithm\n",
+    "        Implements initialise centroids and update_centroids\n",
+    "        according to max_iter\n",
+    "        -----------------------\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        instance of kmeans class\n",
+    "            \n",
+    "        \"\"\"\n",
+    "        self.centroids = self.initialise_centroids(data)\n",
+    "        \n",
+    "        # Main kmeans loop\n",
+    "        for iter in range(self.max_iter):\n",
+    "\n",
+    "            self.cluster_labels = self.assign_clusters(data)\n",
+    "            self.centroids = self.update_centroids(data)          \n",
+    "            if iter % 100 == 0:\n",
+    "                print(\"Running Model Iteration %d \" %iter)\n",
+    "        print(\"Model finished running\")\n",
+    "        return self    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,11 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Vectorisation : -\n",
+    "#Vectorization : -\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
@@ -113,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -122,19 +263,20 @@
        "KMeans(n_clusters=2, n_init=100)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "modelkmeans = KMeans(n_clusters=2, init='k-means++', n_init=100)\n",
+    "# modelkmeans = KMeans(2,1,100) figure out how to use this guys class\n",
     "modelkmeans.fit(X_train_tvec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +285,7 @@
        "['kmeans.h5']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,12 +304,13 @@
     "Y_sklearn = sklearn_pca.fit_transform(X_test_tvec)\n",
     "\n",
     "predicted_values = modelkmeans.predict(X_test_tvec)\n",
-    "fitted = modelkmeans.fit(X_test_tvec)\n",
+    "# fitted = modelkmeans.fit(X_test_tvec)\n",
     "\n",
     "plt.scatter(Y_sklearn[:, 0], Y_sklearn[:, 1], c=predicted_values, s=50, cmap='viridis')\n",
     "\n",
-    "centers = fitted.centroids\n",
-    "plt.scatter(centers[:, 0], centers[:, 1],c='black', s=300, alpha=0.6);"
+    "# centers = fitted.centroids once we get the Kmeans class working, we can graph centroids\n",
+    "centers = np.array(modelkmeans.cluster_centers_)\n",
+    "plt.scatter(centers[:, 0], centers[:, 1],c='red', s=300, alpha=0.6);"
    ]
   },
   {
